fix: avoid code break horizontal scroll on little screens.

--- a/app/assets/stylesheets/common.css.sass
+++ b/app/assets/stylesheets/common.css.sass
@@ -49,9 +49,10 @@ body //
 
 code//
   background-color: #FEFEFE
-  border: 1px solid #FBFBFB
   border-radius: 3px
+  border: 1px solid #FBFBFB
   margin: 0 2px
+  overflow: scroll
   padding: 1px 5px
 
 pre//
